--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "doc"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/xiaofuzi/deep-in-vue/issues"
   },
-  "homepage": "https://github.com/xiaofuzi/deep-in-vue#readme"
+  "homepage": "https://github.com/xiaofuzi/deep-in-vue#readme",
+  "devDependencies": {
+    "typescript": "^3.8.3"
+  }
 }
