--- a/package.json
+++ b/package.json
@@ -24,6 +24,15 @@
   },
   "homepage": "https://github.com/xiaofuzi/deep-in-vue#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-formatter-friendly": "^7.0.0",
+    "eslint-formatter-summary": "^1.0.4",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^2.0.2",
     "typescript": "^3.8.3"
-  }
+  },
+  "dependencies": {}
 }
