--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "doc": "doc"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "dev": "parcel dev the-super-tiny-vue.html",
+    "build": "parcel build the-super-tiny-vue.html",
     "lint": "eslint src/*.ts"
   },
   "repository": {
@@ -32,6 +32,8 @@
     "eslint-formatter-friendly": "^7.0.0",
     "eslint-formatter-summary": "^1.0.4",
     "eslint-plugin-prettier": "^3.1.2",
+    "parcel": "^1.12.4",
+    "parcel-plugin-nuke-dist": "^1.0.1",
     "prettier": "^2.0.2",
     "typescript": "^3.8.3"
   },
